--- a/_includes/themes/the-minimum/post.html
+++ b/_includes/themes/the-minimum/post.html
@@ -17,17 +17,17 @@
 							Published: 
 							<date class="date-pub" title="{{ page.date | date_to_xmlschema }}" datetime="{{ page.date | date_to_xmlschema }}" pubdate>
 							<span class="month"><abbr>{{ page.date | date: '%B' }}</abbr></span>
-							<span class="day">{{ page.date | date: '%d' }}</span>
+							<span class="day">{{ page.date | date: '%d' }}</span>,
 							<span class="year">{{ page.date | date: '%Y' }}</span>
 							</date>
 						</p>
 						<ul class="list-category list-linear">
-							<li class="list-head">category: </li>
+							<li class="list-head">category:&nbsp;</li>
 							{% assign categories_list = page.categories %}
 							{% include JB/categories_list %}
 						</ul>
 						<ul class="list-tag list-linear">
-							<li class="list-head">tags: </li>
+							<li class="list-head">tags:&nbsp;</li>
 							{% assign tags_list = page.tags %}
 							{% include JB/tags_list %}
 						</ul>
